Sectorizacion deMetoceanData: Sectorizacion, right-left logic, peak_enhancement factor. NSS: creacion del objeto y calculo de tablas. Hoja Configuracion: introduccion de mean/median y derive peak enhancement factor ennment factor variable

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ wave_data.txt
 current_data.txt
 water_data.txt
 tests.ipynb
+sucio.ipynb
+checks/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
