First iteration of the NSS branch completed. Calculates tables and prints results to Excel report

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ water_data.txt
 tests.ipynb
 sucio.ipynb
 NSS_test_output.xlsx
+NSS_test_output_sucio.xlsx
 checks/
 
 # Byte-compiled / optimized / DLL files
